Dropped support for overflow mixin. Wasn't neeed and fixes a bug in the mixins

--- a/stylesheets/_grid-coordinates.sass
+++ b/stylesheets/_grid-coordinates.sass
@@ -53,11 +53,6 @@ $overflow: false !default
     .grid-pull-#{$i}
       @include grid-pull($i)
 
-// Being deprecated
-=overflow
-  @if $overflow and $support-legacy-grid-clearfix
-    @include a-clearfix
-
 // Grid Container
 =grid-container-base
   margin:
